--- a/index.html
+++ b/index.html
@@ -35,82 +35,82 @@
             </div>
             <div class="view-selector">
                 <div class="view-selector__item">Daily</div>
-                <div class="view-selector__item">Weekly</div>
+                <div class="view-selector__item view-selector__item--active">Weekly</div>
                 <div class="view-selector__item">Monthly</div>
             </div>
         </div>
-        <div class="dashboard__item dashboard__item--work">
-            <article class="tracking-card">
-                <header class="tracking-card__header">
-                    <h4 class="tracking-card__title">Work</h4>
-                    <img class="tracking-card__menu" src="images/icon-ellipsis.svg" alt="Menu">
-                </header>
-                <div class="tracking-card__body">
-                    <div class="tracking-card__time">5hrs</div>
-                    <div class="tracking-card__prev-period">Previous - 7hrs</div>
-                </div>
-            </article>
-        </div>
-        <div class="dashboard__item dashboard__item--play">
-            <article class="tracking-card">
-                <header class="tracking-card__header">
-                    <h4 class="tracking-card__title">Work</h4>
-                    <img class="tracking-card__menu" src="images/icon-ellipsis.svg" alt="Menu">
-                </header>
-                <div class="tracking-card__body">
-                    <div class="tracking-card__time">5hrs</div>
-                    <div class="tracking-card__prev-period">Previous - 7hrs</div>
-                </div>
-            </article>
-        </div>
-        <div class="dashboard__item dashboard__item--study">
-            <article class="tracking-card">
-                <header class="tracking-card__header">
-                    <h4 class="tracking-card__title">Work</h4>
-                    <img class="tracking-card__menu" src="images/icon-ellipsis.svg" alt="Menu">
-                </header>
-                <div class="tracking-card__body">
-                    <div class="tracking-card__time">5hrs</div>
-                    <div class="tracking-card__prev-period">Previous - 7hrs</div>
-                </div>
-            </article>
-        </div>
-        <div class="dashboard__item dashboard__item--exercise">
-            <article class="tracking-card">
-                <header class="tracking-card__header">
-                    <h4 class="tracking-card__title">Work</h4>
-                    <img class="tracking-card__menu" src="images/icon-ellipsis.svg" alt="Menu">
-                </header>
-                <div class="tracking-card__body">
-                    <div class="tracking-card__time">5hrs</div>
-                    <div class="tracking-card__prev-period">Previous - 7hrs</div>
-                </div>
-            </article>
-        </div>
-        <div class="dashboard__item dashboard__item--social">
-            <article class="tracking-card">
-                <header class="tracking-card__header">
-                    <h4 class="tracking-card__title">Work</h4>
-                    <img class="tracking-card__menu" src="images/icon-ellipsis.svg" alt="Menu">
-                </header>
-                <div class="tracking-card__body">
-                    <div class="tracking-card__time">5hrs</div>
-                    <div class="tracking-card__prev-period">Previous - 7hrs</div>
-                </div>
-            </article>
-        </div>
-        <div class="dashboard__item dashboard__item--self-care">
-            <article class="tracking-card">
-                <header class="tracking-card__header">
-                    <h4 class="tracking-card__title">Work</h4>
-                    <img class="tracking-card__menu" src="images/icon-ellipsis.svg" alt="Menu">
-                </header>
-                <div class="tracking-card__body">
-                    <div class="tracking-card__time">5hrs</div>
-                    <div class="tracking-card__prev-period">Previous - 7hrs</div>
-                </div>
-            </article>
-        </div>
+<!--        <div class="dashboard__item dashboard__item&#45;&#45;work">-->
+<!--            <article class="tracking-card">-->
+<!--                <header class="tracking-card__header">-->
+<!--                    <h4 class="tracking-card__title">Work</h4>-->
+<!--                    <img class="tracking-card__menu" src="images/icon-ellipsis.svg" alt="Menu">-->
+<!--                </header>-->
+<!--                <div class="tracking-card__body">-->
+<!--                    <div class="tracking-card__time">5hrs</div>-->
+<!--                    <div class="tracking-card__prev-period">Previous - 7hrs</div>-->
+<!--                </div>-->
+<!--            </article>-->
+<!--        </div>-->
+<!--        <div class="dashboard__item dashboard__item&#45;&#45;play">-->
+<!--            <article class="tracking-card">-->
+<!--                <header class="tracking-card__header">-->
+<!--                    <h4 class="tracking-card__title">Work</h4>-->
+<!--                    <img class="tracking-card__menu" src="images/icon-ellipsis.svg" alt="Menu">-->
+<!--                </header>-->
+<!--                <div class="tracking-card__body">-->
+<!--                    <div class="tracking-card__time">5hrs</div>-->
+<!--                    <div class="tracking-card__prev-period">Previous - 7hrs</div>-->
+<!--                </div>-->
+<!--            </article>-->
+<!--        </div>-->
+<!--        <div class="dashboard__item dashboard__item&#45;&#45;study">-->
+<!--            <article class="tracking-card">-->
+<!--                <header class="tracking-card__header">-->
+<!--                    <h4 class="tracking-card__title">Work</h4>-->
+<!--                    <img class="tracking-card__menu" src="images/icon-ellipsis.svg" alt="Menu">-->
+<!--                </header>-->
+<!--                <div class="tracking-card__body">-->
+<!--                    <div class="tracking-card__time">5hrs</div>-->
+<!--                    <div class="tracking-card__prev-period">Previous - 7hrs</div>-->
+<!--                </div>-->
+<!--            </article>-->
+<!--        </div>-->
+<!--        <div class="dashboard__item dashboard__item&#45;&#45;exercise">-->
+<!--            <article class="tracking-card">-->
+<!--                <header class="tracking-card__header">-->
+<!--                    <h4 class="tracking-card__title">Work</h4>-->
+<!--                    <img class="tracking-card__menu" src="images/icon-ellipsis.svg" alt="Menu">-->
+<!--                </header>-->
+<!--                <div class="tracking-card__body">-->
+<!--                    <div class="tracking-card__time">5hrs</div>-->
+<!--                    <div class="tracking-card__prev-period">Previous - 7hrs</div>-->
+<!--                </div>-->
+<!--            </article>-->
+<!--        </div>-->
+<!--        <div class="dashboard__item dashboard__item&#45;&#45;social">-->
+<!--            <article class="tracking-card">-->
+<!--                <header class="tracking-card__header">-->
+<!--                    <h4 class="tracking-card__title">Work</h4>-->
+<!--                    <img class="tracking-card__menu" src="images/icon-ellipsis.svg" alt="Menu">-->
+<!--                </header>-->
+<!--                <div class="tracking-card__body">-->
+<!--                    <div class="tracking-card__time">5hrs</div>-->
+<!--                    <div class="tracking-card__prev-period">Previous - 7hrs</div>-->
+<!--                </div>-->
+<!--            </article>-->
+<!--        </div>-->
+<!--        <div class="dashboard__item dashboard__item&#45;&#45;self-care">-->
+<!--            <article class="tracking-card">-->
+<!--                <header class="tracking-card__header">-->
+<!--                    <h4 class="tracking-card__title">Work</h4>-->
+<!--                    <img class="tracking-card__menu" src="images/icon-ellipsis.svg" alt="Menu">-->
+<!--                </header>-->
+<!--                <div class="tracking-card__body">-->
+<!--                    <div class="tracking-card__time">5hrs</div>-->
+<!--                    <div class="tracking-card__prev-period">Previous - 7hrs</div>-->
+<!--                </div>-->
+<!--            </article>-->
+<!--        </div>-->
 
     </div>
 </section>
